--- a/src/Components/shopItem/ShopItemStyle.scss
+++ b/src/Components/shopItem/ShopItemStyle.scss
@@ -13,6 +13,24 @@
     margin-bottom: 5px;
   }
 
+  .custom-button {
+    width: 15%;
+    opacity: 0.7;
+    position: absolute;
+    top: 400px;
+    display: none;
+  }
+
+  &:hover {
+    .image {
+      opacity: 0.8;
+    }
+
+    .custom-button {
+      opacity: 0.85;
+      display: flex;
+    }
+  }
   .shop_footer {
     width: 100%;
     height: 5%;
